controllers/refresolver/gatewayapihttproute/testdata/gatewayapi_httproute_multiple_backendrefs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewayapi-httproute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  hostnames:
  - gatewayapi-httproute.cloud.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        prefix: /debug
    backendRefs:
    - name: gatewayapi-service1
      port: 8080
  - backendRefs:
    - name: gatewayapi-service2
      port: 8080
