controllers/refresolver/gatewayapihttproute/testdata/gatewayapi_httproute_multiple_hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewayapi-httproute
  namespace: test-gslb
spec:
  parentRefs:
    - name: gatewayapi-gateway
  hostnames:
    - gatewayapi-httproute1.cloud.example.com
    - gatewayapi-httproute2.cloud.example.com
  rules:
    - backendRefs:
        - name: gatewayapi-service
          port: 8080
